--- a/templates/project.html
+++ b/templates/project.html
@@ -18,10 +18,10 @@
             <div class="card border-0 shadow-sm">
                 <div class="card-body d-flex align-items-center py-2">
                     <div class="rounded-circle bg-primary p-2 mr-3">
-                        <i class="material-icons text-white">folder</i>
+                        <i class="material-icons-outlined text-white">folder</i>
                     </div>
                     <div>
-                        <h6 class="text-muted mb-1 small">Total Projects</h6>
+                        <h6 class="text-muted mb-1 small">Total des Projets</h6>
                         <h5 class="mb-0 font-weight-bold">{{ total_projects }}</h5>
                     </div>
                 </div>
