new file:   static/images/login.png 	new file:   static/images/sign up.png 	modified:   templates/connexion.html 	modified:   templates/inscription.html

--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -13,7 +13,7 @@
     <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100">
             <div class="col-md-6 d-flex align-items-center justify-content-center order-0 order-md-1">
-                <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Image" class="img-fluid">
+                <img src="{{ url_for('static', filename='images/sign up.png') }}" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-center order-1 order-md-0">
                 <div class="w-100 px-3 px-md-0" style="max-width: 600px;">
